<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".HomeActivity">

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/profile_pic"
        android:background="@drawable/rounded_image"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />

    <!-- Greeting Text -->

    <!-- Welcome Text -->

    <TextView
        android:id="@+id/greetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="start"
        android:text="@string/hello_chamudithaa"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Menu Icon -->

    <TextView
        android:id="@+id/welcomeText"
        android:layout_height="30dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="76dp"
        android:text="@string/welcome_backk"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/greetingText"
        app:layout_constraintStart_toStartOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="100dp"/>

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp" />

    <!-- Search Bar -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

    </androidx.cardview.widget.CardView>


    <!-- Grid of Cards -->
    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        tools:ignore="UnknownId"/>


    <!-- Bottom Navigation Bar -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/Navbar"
            android:layout_width="558dp"
            android:layout_height="63dp"
            android:contentDescription="@string/toodoo"
            android:src="@drawable/bottom"
            tools:layout_editor_absoluteX="-74dp"
            tools:layout_editor_absoluteY="-1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/search_keywords"

            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/dogImage"
        android:layout_width="154dp"
        android:layout_height="129dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="428dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/pet_overview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:text="@string/pet_overview"
        app:layout_constraintTop_toBottomOf="@id/dogImage"
        app:layout_constraintLeft_toLeftOf="parent"
        >
    </TextView>


    <ImageView
        android:id="@+id/catImage"
        android:layout_width="157dp"
        android:layout_height="128dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="428dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cat_image"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:text="@string/health_and_wellness"
        app:layout_constraintTop_toBottomOf="@id/catImage"
        app:layout_constraintLeft_toLeftOf="parent"
        >
    </TextView>

    <ImageView
        android:id="@+id/trainDog"
        android:layout_width="154dp"
        android:layout_height="125dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="212dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dog_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/training_and_socialization"
        app:layout_constraintTop_toBottomOf="@id/trainDog"
        app:layout_constraintLeft_toLeftOf="parent"
        >
    </TextView>

    <ImageView
        android:id="@+id/lostDog"
        android:layout_width="156dp"
        android:layout_height="124dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="212dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lost_dog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:text="@string/shop_and_n_lost_pets"
        app:layout_constraintTop_toBottomOf="@id/lostDog"
        app:layout_constraintLeft_toLeftOf="parent"
        >
    </TextView>




</androidx.constraintlayout.widget.ConstraintLayout>
