<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_gradient"
    android:padding="30dp"
    tools:context=".Page1">

    <!-- Logo -->
    <androidx.cardview.widget.CardView
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:cardCornerRadius="90dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/petpal_logo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/pet_pal_logo" />
    </androidx.cardview.widget.CardView>

    <!-- Tagline -->

    <!-- Explore Button -->
    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/smart_care_for_n_happy_pets"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/exploreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:backgroundTint="@color/buttonblue"
        android:elevation="8dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="40dp"
        android:paddingTop="14dp"
        android:paddingRight="40dp"
        android:paddingBottom="14dp"
        android:text="@string/explore"
        android:textColor="@color/black"
        android:textSize="18sp"

        android:textStyle="bold" />

</LinearLayout>
