<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_gradient"
    android:padding="24dp">

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_lost_pets"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:shadowColor="@color/shadowcolor"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2" />

    <!-- Rounded Image -->
    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/lostDogImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/lost_dog" />
    </androidx.cardview.widget.CardView>

    <!-- Description -->
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/find_the_best_pet_nproducts_or_get_help_nlocating_lost_pets"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:lineSpacingExtra="6dp" />


    <!-- Next Button -->
    <Button
        android:id="@+id/nextBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/buttonblue"
        android:text="@string/arrow"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_gravity="end" />
</LinearLayout>
