<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_wellness"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:shadowColor="@color/shadowcolor"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2" />

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

    <!-- Image -->
    <ImageView
        android:id="@+id/healthImage"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:src="@drawable/cat_image"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded_image"
        android:layout_marginBottom="20dp"
        />
    </androidx.cardview.widget.CardView>
    <!-- Description -->
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/keep_your_pet_s_health_on_track_with_medical_records_and_helpful_reminders"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:lineSpacingExtra="6dp"
    />


    <!-- Navigation Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:backgroundTint="@color/buttonblue"
        android:text="@string/Arrow"
        android:textColor="@color/black"
        android:textSize="22sp" />
</LinearLayout>
